// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`list-picker — list row rendering > given a list of items > when an item is focused (selected) > renders focused row with selection highlight 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (3/3)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m [icon] file-a.ts[0m           [38;2;250;208;0m│[39m[0m  line1[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [icon] file-b.ts[22m[39m           [49m[38;2;250;208;0m│[39m[0m  line2[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-c.ts[0m           [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > given a list of items > when focused item is near the bottom > scrolls the list to show the focused item 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (15/15)[0m        [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-000.ts[0m  [38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-001.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-002.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-003.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-004.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-005.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-006.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-007.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-008.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-009.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-010.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-011.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [★] long-file-name-012.ts[22m[39m  [49m[38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-013.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] long-file-name-014.ts[0m  [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > given a list of items > when rendering multiple items with different path lengths > renders all rows with consistent left padding 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (3/3)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [icon] short.ts[22m[39m            [49m[38;2;250;208;0m│[39m[0m  line1[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] medium-length-file.t[38;2;250;208;0m│[39m[0m  line2[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] this-is-a-very-long-[38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > given a list of items > when rendering with a single item > renders the item row consistently padded 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (1/1)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [icon] single-file.txt[22m[39m     [49m[38;2;250;208;0m│[39m[0m  line1[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m  line2[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > given a list of items > when rendering with custom formatItem > uses the custom formatter consistently across rows 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (3/3)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [★] added-file.ts[22m[39m          [49m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] modified-file.ts[0m       [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [★] deleted-file.ts[0m        [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > given a list of items > when terminal height is smaller than item count > renders only visible rows with consistent padding 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (15/15)[0m        [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [icon] file-000.ts[22m[39m         [49m[38;2;250;208;0m│[39m[0m  line1[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-001.ts[0m         [38;2;250;208;0m│[39m[0m  line2[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-002.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-003.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-004.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-005.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-006.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-007.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-008.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-009.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-010.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-011.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-012.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-013.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] file-014.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > given a list of items > when the focused item changes > updates the focused row highlight 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (4/4)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m [icon] alpha.ts[0m            [38;2;250;208;0m│[39m[0m  line1[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] beta.ts[0m             [38;2;250;208;0m│[39m[0m  line2[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] gamma.ts[0m            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [icon] delta.ts[22m[39m            [49m[38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > given a list of items > with ANSI-colored labels > renders rows with consistent padding when formatItem uses theme colors 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (2/2)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [38;2;250;208;0m[icon] normal.ts[39m[22m[39m           [49m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [38;2;250;208;0m[icon] typescript.ts[39m[0m       [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > given a list of items > with wide characters in labels > renders rows with consistent padding despite wide chars 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (3/3)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [icon] 文件.ts[22m[39m             [49m[38;2;250;208;0m│[39m[0m  line1[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] αρχείο.ts[0m           [38;2;250;208;0m│[39m[0m  line2[0m                                          [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] ファイル.ts[0m         [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > given empty items > renders the empty message row 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (0/0)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[38;2;76;62;118m No items found[0m             [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > given error state > renders the error row 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (0/0)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[38;2;255;98;140m Error: Failed to load[0m      [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > given loading state > renders the loading row 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (0/0)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[38;2;76;62;118m Loading...[0m                 [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > when rendered at different widths > produces consistent padding at narrow width 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker ([39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m        [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [icon] short.[22m[39m[49m[38;2;250;208;0m│[39m[0m  line1[0m                [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] a-very[38;2;250;208;0m│[39m[0m  line2[0m                [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m              [38;2;250;208;0m│[39m[0m                       [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                   [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering > when rendered at different widths > produces consistent padding at wide width 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (2/2)[0m                        [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                                            [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[48;2;50;36;93m[38;2;250;208;0m[1m [icon] short.ts[22m[39m                          [49m[38;2;250;208;0m│[39m[0m  line1[0m                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m [icon] medium-file.ts[0m                    [38;2;250;208;0m│[39m[0m  line2[0m                                                                    [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                                          [38;2;250;208;0m│[39m[0m                                                                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m──────────────────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m───────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                                                                   [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;

exports[`list-picker — list row rendering given loading state renders the loading row 1`] = `
[
  "[38;2;250;208;0m╭[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┬[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m╮[39m",
  "[38;2;250;208;0m│[39m[38;2;250;208;0m[38;2;250;208;0m Test Picker (0/0)[0m          [39m[39m[38;2;250;208;0m│[39m[38;2;76;62;118m[38;2;250;208;0m Source Preview[0m                                  [39m[39m[38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┼[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;250;208;0m│[39m[38;2;76;62;118m Loading...[0m                 [39m[38;2;250;208;0m│[39m[0m[38;2;76;62;118m  No preview available[39m[0m                           [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m│[39m[0m                            [38;2;250;208;0m│[39m[0m                                                 [38;2;76;62;118m│[39m",
  "[38;2;250;208;0m├[39m[38;2;250;208;0m────────────────────────────[39m[38;2;250;208;0m┴[39m[38;2;76;62;118m─────────────────────────────────────────────────[39m[38;2;76;62;118m┤[39m",
  "[38;2;76;62;118m│[39m[38;2;76;62;118m ↑ nav  pgup scroll[0m                                                           [39m[38;2;76;62;118m│[39m",
  "[38;2;76;62;118m╰[39m[38;2;76;62;118m──────────────────────────────────────────────────────────────────────────────[39m[38;2;76;62;118m╯[39m",
]
`;
